--- a/src/components/CategoriesList/CategoriesList.module.css
+++ b/src/components/CategoriesList/CategoriesList.module.css
@@ -8,6 +8,8 @@
   margin-bottom: 100px;
 }
 
-.card {
-  width: 390px;
+@media screen and (min-width: 1440px) {
+  .card {
+    width: 390px;
+  }
 }
