--- a/src/components/VehicleCard/VehicleCard.module.css
+++ b/src/components/VehicleCard/VehicleCard.module.css
@@ -5,12 +5,16 @@
   min-height: 368px;
 }
 
-.card-layout {
-  display: flex;
+@media screen and (min-width: 1440px) {
+  .card-layout {
+    display: flex;
+  }
 }
 
-.card-right {
-  width: 524px;
+@media screen and (min-width: 1440px) {
+  .card-right {
+    width: 524px;
+  }
 }
 
 .card-body {
@@ -18,4 +22,3 @@
   flex-direction: column;
   gap: 24px;
 }
-
