--- a/src/components/VehicleCardHead/VehicleCardHead.module.css
+++ b/src/components/VehicleCardHead/VehicleCardHead.module.css
@@ -6,10 +6,16 @@
 }
 
 .card-head-container-row {
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: flex-start;
   margin-bottom: 24px;
+}
+
+@media screen and (min-width: 1440px) {
+  .card-head-container-row {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin-bottom: 24px;
+  }
 }
 
 .title {
