--- a/src/components/VehicleImage/VehicleImage.module.css
+++ b/src/components/VehicleImage/VehicleImage.module.css
@@ -1,10 +1,14 @@
 .image-container {
-  width: 292px;
-  /* height: 100%; */
   min-height: 320px;
   overflow: hidden;
   border-radius: 10px;
   margin-right: 24px;
+}
+
+@media screen and (min-width: 1440px) {
+  .image-container {
+    width: 292px;
+  }
 }
 
 .image-container img {
