--- a/src/pages/CatalogPage/CatalogPage.module.css
+++ b/src/pages/CatalogPage/CatalogPage.module.css
@@ -11,8 +11,13 @@
 }
 
 .catalog {
-  width: 888px;
   display: flex;
   flex-direction: column;
   gap: 40px;
+}
+
+@media screen and (min-width: 1440px) {
+  .catalog {
+    width: 888px;
+  }
 }
